--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
     <section class="container-fluid dopicbg">
         <div class="container sp">
-            <h1>WANT US TO HELP YOU WITH ASSIGNMENT/PROJECT WORK</h1>
+            <h1>WANT A ONE-ONE TUTORING SERVICE</h1>
             <h5>There are many ways to contact us. You may drop us a line, give us a call or send an email, choose what suits you the most.</h5>
             <a href="contact.html " class="btn btn-primary">GET IN TOUCH</a>
         </div>
