--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                     <!-- <img class="d-block w-100" src="assets/img/1.jpg" alt="First slide"> -->
                     <div class="carousel-caption d-md-block">
                         <h1>We Are An Edtech Organization  on Growing Students Community Online to aid in smooth learning and Development</h1>
-                        <a href="index.html" class="btn btn-primary">JOIN</a>
+                        <a href="login.html" class="btn btn-primary">JOIN</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <!-- <img class="d-block w-100" src="assets/img/1.jpg" alt="Second slide"> -->
                     <div class="carousel-caption d-md-block">
                         <h1>Enabling students interact in a<br> conducive educational platform online</h1>
-                        <a href=" " class="btn btn-primary">JOIN</a>
+                        <a href="login.html " class="btn btn-primary">JOIN</a>
                     </div>
                 </div>
             </div>
