--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="landingpage.html">Home </a>
+                    <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
@@ -49,31 +49,28 @@
                     <br> Accra, Ghana</p>
                 <h1>Follow Us</h1>
                 <div class="social con">
-                        <a href="http://www.facebook.com/palsnetworkgh" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="http://www.twitter.com/palsnetworkglob" target="_blank"><i class="fab fa-twitter"></i></a>
-                    </div>
-
-
+                    <a href="http://www.facebook.com/palsnetworkgh" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="http://www.twitter.com/palsnetworkglob" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
-
-            <div class= col-lg-6 ">
+            <div class=c ol-lg-6 ">
                 <h1>Get In Touch With Us!</h1>
                 <p>Fill out the form below to recieve a free and confidential.</p>
-                <form class="contact_us_form row" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
-                                    <div class="form-group col-lg-12">
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                <form class="contact_us_form row " action="contact_process.php " method="post " id="contactForm " novalidate="novalidate ">
+                                    <div class="form-group col-lg-12 ">
+                                        <input type="text " class="form-control " id="name " name="name " placeholder="Name ">
                                     </div>
-                                    <div class="form-group col-lg-12">
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                                    <div class="form-group col-lg-12 ">
+                                        <input type="email " class="form-control " id="email " name="email " placeholder="Email ">
                                     </div>
-                                    <div class="form-group col-lg-12">
-                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Website">
+                                    <div class="form-group col-lg-12 ">
+                                        <input type="text " class="form-control " id="subject " name="subject " placeholder="Website ">
                                     </div>
-                                    <div class="form-group col-lg-12">
-                                        <textarea class="form-control" name="message" id="message" rows="1" placeholder="Message"></textarea>
+                                    <div class="form-group col-lg-12 ">
+                                        <textarea class="form-control " name="message " id="message " rows="1 " placeholder="Message "></textarea>
                                     </div>
-                                    <div class="form-group col-md-12">
-                                        <button type="submit" value="submit" class="btn btn-primary">Send Messages</button>
+                                    <div class="form-group col-md-12 ">
+                                        <button type="submit " value="submit " class="btn btn-primary ">Send Messages</button>
                                     </div>
                                 </form>
             </div>
@@ -82,61 +79,61 @@
             </div>
         </div>
     </section>
-    <footer class="container-fluid fotbg">
-        <div class="container ff">
-            <div class="row">
-                <div class=" col-lg-4">
+    <footer class="container-fluid fotbg ">
+        <div class="container ff ">
+            <div class="row ">
+                <div class=" col-lg-4 ">
                     <h4>Our Newsletter</h4>
                     <p>Subscribe to our mailing list to get the updates to your email inbox.</p>
-                    <div class="input-group">
-                        <input type="email" class="form-control" placeholder="E-mail">
-                        <button class="sub" type="button">Subscribe</button>
+                    <div class="input-group ">
+                        <input type="email " class="form-control " placeholder="E-mail ">
+                        <button class="sub " type="button ">Subscribe</button>
                     </div>
-                    <div class="social">
-                        <a href="http://www.facebook.com/palsnetworkgh" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="http://www.twitter.com/palsnetworkglob" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <div class="social ">
+                        <a href="http://www.facebook.com/palsnetworkgh " target="_blank "><i class="fab fa-facebook-f "></i></a>
+                        <a href="http://www.twitter.com/palsnetworkglob " target="_blank "><i class="fab fa-twitter "></i></a>
                     </div>
                 </div>
-                <div class=" col-lg-4 space">
+                <div class=" col-lg-4 space ">
                     <h4>Link Categories</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="# ">Home</a></li>
+                        <li><a href="# ">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class=" col-lg-4 space">
+                <div class=" col-lg-4 space ">
                     <h4>Contact Us</h4>
-                    <a href="#">+233 (0)574-375-422</a>
-                    <a href="#">palsnetworkglob@gmail.com</a>
+                    <a href="# ">+233 (0)574-375-422</a>
+                    <a href="# ">palsnetworkglob@gmail.com</a>
                     <p>Labone
                         <br />Accra, GHANA</p>
                 </div>
             </div>
     </footer>
-    <section class="container-fluid footer-bt">
+    <section class="container-fluid footer-bt ">
         <section class="container ">
-            <div class="float-md-left">
-                <p>Copyright &copy; All rights reserved | by ALL BLACK<a href="" target="_blank"></a></p>
+            <div class="float-md-left ">
+                <p>Copyright &copy; All rights reserved | by ALL BLACK<a href=" " target="_blank "></a></p>
             </div>
-            <div class="float-md-right">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Disclaimer</a>
+            <div class="float-md-right ">
+                <ul class="nav ">
+                    <li class="nav-item ">
+                        <a class="nav-link active " href="# ">Disclaimer</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Privacy</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">Privacy</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="# ">Contact us</a>
                     </li>
                 </ul>
             </div>
             </div>
-            <div class="clear"></div>
+            <div class="clear "></div>
         </section>
     </section>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js "></script>
+    <script src="assets/js/bootstrap.min.js "></script>
 </body>
 
 </html>
